--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2050,34 +2050,39 @@
                 <table class="table" style="border: 1px solid #DDD;">
                     <tbody>
                         <tr>
-                            <td class="text-center"><i class="fa fa-user-circle" aria-hidden="true"></i></td>
+                            <td class="text-center"><i class="fa fa-user" aria-hidden="true"></i></td>
                             <th>Name: </th>
-                            <td>Lorem Ipsum.</td>
+                            <td data-name></td>
+                        </tr>
+                        <tr>
+                            <td class="text-center"><i class="fa fa-user-circle" aria-hidden="true"></i></td>
+                            <th>HydroShare Profile: </th>
+                            <td><a data-profileurl href="#"></a></td>
                         </tr>
                         <tr>
                             <td class="text-center"><i class="fa fa-building" aria-hidden="true"></i></td>
                             <th>Organization:</th>
-                            <td>Lorem ipsum dolor.</td>
+                            <td data-organization></td>
                         </tr>
                         <tr>
                             <td class="text-center"><i class="fa fa-envelope" aria-hidden="true"></i></td>
                             <th>Email:</th>
-                            <td>Lorem@lorem.com</td>
+                            <td data-email></td>
                         </tr>
                         <tr>
                             <td class="text-center"><i class="fa fa-map-marker" aria-hidden="true"></i></td>
                             <th>Address:</th>
-                            <td>Lorem ipsum dolor sit.</td>
+                            <td data-address></td>
                         </tr>
                         <tr>
                             <td class="text-center"><i class="fa fa-phone-square" aria-hidden="true"></i></td>
                             <th>Phone:</th>
-                            <td>+1 (435) 363-5910</td>
+                            <td data-phone></td>
                         </tr>
                         <tr>
                             <td class="text-center"><i class="fa fa-globe" aria-hidden="true"></i></td>
                             <th>Homepage:</th>
-                            <td>somehomepage.com</td>
+                            <td><a href="#" target="_blank" data-homepage></a></td>
                         </tr>
                         <tr>
                             <td class="text-center"><i class="fa fa-external-link-square" aria-hidden="true"></i></td>
