--- a/theme/templates/includes/author-link.html
+++ b/theme/templates/includes/author-link.html
@@ -1,12 +1,18 @@
-<a data-toggle="modal"
+<a data-toggle="modal" class="author-preview"
    data-target="#view-author-modal" href="#"
-   data-name="{{ author.name }}" data-email="{{ author.email }}"
+   data-name="{{ author.name }}"
+   data-email="{{ author.email }}"
    data-organization="{{ author.organization }}"
-   data-title="{{ author.title }}"
-        {% for name, link in author.supported_identifiers.items %}
+        {% for name, link in author.identifiers.items %}
    data-{{ name }}="{{ link }}"
         {% endfor %}
-   data-state="{{ author.state }}" data-country="{{ author.country }}"
-   data-profile-url="{{ author.description }}">
-    {{ author.name }}
+   data-address="{{ author.address }}"
+   data-phone="{{ author.phone }}"
+   data-homepage="{{ author.homepage }}"
+   data-profileurl="{{ author.description }}">
+    {% if author.name %}
+        {{ author.name }}
+    {% else %}
+        {{ author.organization }}
+    {% endif %}
 </a>
