--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -20,7 +20,7 @@
             <div style="flex-grow: 1;">
                 <h3 style="margin-top: 0;"><a href="#" title="View Profile" data-name></a></h3>
 
-                <table style="margin-left: -14px;">
+                <table>
                     <tr class="email-wrapper">
                         <td class="text-center"><i class="fa fa-envelope text-muted" aria-hidden="true"></i></td>
                         <td><span data-email></span></td>
