--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -49,70 +49,7 @@
                 </table>
             </div>
             <div class="col-sm-12 col-md-6 res-header">
-                <table id="table-stats" class="info-table">
-                    <tr>
-                        {% if cm.raccess.published %}
-                            <td><img src="{{ STATIC_URL }}img/published.png" alt="Published Resource"/></td>
-                            <td>Published</td>
-                        {% elif cm.raccess.public %}
-                            <td><img src="{{ STATIC_URL }}img/public.png" alt="Public Resource"/></td>
-                            <td>Public</td>
-                        {% elif cm.raccess.discoverable %}
-                            <td><img src="{{ STATIC_URL }}img/discoverable.png" alt="Discoverable Resource"/></td>
-                            <td>Discoverable</td>
-                        {% else %}
-                            <td><img src="{{ STATIC_URL }}img/private.png" alt="Private Resource"/></td>
-                            <td>Private</td>
-                        {% endif %}
-                    </tr>
-                    {% if cm.raccess.published %}
-                        {% if "pending" in cm.doi or "failure" in cm.doi %}
-                            <tr>
-                                <td><img src="{{ STATIC_URL }}img/pending.png" alt=""/></td>
-                                <td>Pending publication</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td>
-                                <span class="small text-muted">
-                                    Note that the DOI will not be available until it has been registered and activated.
-                                </span>
-                                </td>
-                            </tr>
-                        {% endif %}
-                    {% else %}
-                        <tr>
-                            {% if cm.raccess.shareable %}
-                                <td><img src="{{ STATIC_URL }}img/shareable.png" alt="Sharable Resource"/></td>
-                                <td>Shareable</td>
-                            {% else %}
-                                <td><img src="{{ STATIC_URL }}img/non-shareable.png" alt="Non Sharable Resource"/></td>
-                                <td>Not Shareable</td>
-                            {% endif %}
-                        </tr>
-                    {% endif %}
-                    <tr class="info-collapsible">
-                        <td class="text-center"><i class="fa fa-eye" aria-hidden="true"></i></td>
-                        <td><strong>Views:&nbsp;&nbsp;</strong>1,835</td>
-                    </tr>
-                    <tr class="info-collapsible">
-                        <td class="text-center"><i class="fa fa-cloud-download" aria-hidden="true"></i></td>
-                        <td><strong>Downloads:&nbsp;&nbsp;</strong>201</td>
-                    </tr>
-                    <tr class="info-collapsible">
-                        {% include "resource-landing-page/ratings.html" %}
-                    </tr>
-                    <tr class="info-collapsible">
-                        <td class="text-center"><i class="fa fa-comments-o" aria-hidden="true"></i></td>
-                        <td>
-                            <span><a href="#comments">Comments:&nbsp;&nbsp;</a></span>0
-                        </td>
-                    </tr>
-                    <tr class="info-collapsible">
-                        <td class="text-center"><i class="fa fa-quote-right" aria-hidden="true"></i></td>
-                        <td><a href="#citation">Cite this resource</a></td>
-                    </tr>
-                </table>
+                {% include "resource-landing-page/highlights.html" %}
             </div>
         </div>
 
@@ -124,7 +61,7 @@
         </div>
     </div>
 {% else %}
-    <div class="col-sm-6">
+    <div class="col-sm-12 col-md-6 res-header">
         <table class="info-table">
             <tr>
                 <th>Authors:</th>
@@ -177,6 +114,9 @@
                                 </form>
                              </span>
                         {% endfor %}
+                        <span data-toggle="tooltip" data-placement="auto"
+                              title='Drag and drop Authors to rearrange.'
+                              class="glyphicon glyphicon-info-sign text-muted"></span>
                     </span>
                     <a type="button" id="btn-add-new-author" class="btn btn-success btn-xs" data-toggle="modal"
                        data-target="#add-creator-dialog">
@@ -205,5 +145,8 @@
                 </td>
             </tr>
         </table>
+    </div>
+    <div class="col-sm-12 col-md-6 res-header">
+        {% include "resource-landing-page/highlights.html" %}
     </div>
 {% endif %}
