--- a/theme/templates/resource-landing-page/readme-file.html
+++ b/theme/templates/resource-landing-page/readme-file.html
@@ -1,7 +1,7 @@
 {% load markup_tags %}
 
 <div class="col-xs-12 content-block">
-    <h3>README.MD</h3>
+    <h3>ReadMe</h3>
     <pre class="readme">
         {# Pabitra: the following filter is not needed #}
 {#        {{ readme|apply_markup:"markdown" }}  #}
