--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -493,11 +493,12 @@
                                     <hr>
 
                                     <div id="log-into-irods">
+                                        <h5>Add files from an iRODS server</h5>
                                         <a id="btn-signin-irods" type="button" class="btn btn-info"
                                            data-toggle="modal"
                                            data-target="#irodsSignin">
                                             <span class="glyphicon glyphicon-log-in"></span>
-                                            &nbsp;&nbsp;Log in to iRODS to add files from an iRODS server...
+                                            &nbsp;&nbsp;Log in to iRODS
                                         </a>
                                     </div>
 
